# qt6

./: .clang-format  .gitignore  CMakeLists.txt  DYNO_ms_MY.ts  batch_commit.sh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
my-app/: CMakeCache.txt  CMakeLists.txt  CMakeListsAutomotive.txt  README.md  dyno-software-interface.tsx  dyno-station-3d.tsx  next.config.ts
my-app/app/: layout.tsx  page.tsx
my-app/app/dyno-software-interface/: page.tsx
my-app/app/dyno-station-3d/: page.tsx
my-app/app/figma-ui/: page.tsx
my-app/app/installer/: page.tsx
my-app/assets/: motodynopro.desktop
my-app/build-automotive/: CMakeCache.txt  CMakeLists.txt  Makefile  QtAutomotive  cmake_install.cmake
my-app/build-automotive/.qt/: QtDeploySupport.cmake
my-app/build-automotive/QtAutomotive_autogen/: deps
my-app/build-automotive/QtAutomotive_autogen/include/: QtAutomotive.moc  QtAutomotive.moc.d
my-app/components/: error-boundary.tsx
my-app/components/ui/: enhanced-figma-ui.tsx  figma-ui.tsx
my-app/models/: motorcycle-database.json
